    detbuchi_realizable (then it belongs to the recurrence class).
    Force one method or the other by setting the environment variable
    SPOT_PR_CHECK to 1 or 2.
    Note that thanks to the duality of both classes, both algorithms
    will work either on f or its negation.
    (see https://spot.lrde.epita.fr/hierarchy.html for details).

  Deprecation notices:

  (These functions still work but compilers emit warnings.)

  - spot::scc_info::used_acc(), spot::scc_info::used_acc_of() and
    spot::scc_info::acc() are deprecated. They have been renamed
    spot::scc_info::marks(), spot::scc_info::marks_of() and
    spot::scc_info::acc_sets_of() respectively.

  Bugs fixed:

  - The twa_graph::mege_edges() function relied on BDD IDs to sort
    edges.  This in turn caused some algorithm (like the
    degeneralization) to produce slighltly different outputs (but
    still correct outputs) depending on the BDD operations performed
    before.

New in spot 2.4 (2017-09-06)

  Build:

  - Spot is now built in C++14 mode, so you need at least GCC 5 or
    clang 3.4.  The current version of all major linux distributions
    ship with at least GCC 6, which defaults to C++14, so this should
    not be a problem.  In *this* release of Spot, most of the header
    files are still C++11 compatible, so you should be able to include
    Spot in a C++11 project in case you do not yet want to upgrade.
    There is also an --enable-c++17 option to configure in case you
    want to force a build of Spot in C++17 mode.

  Tools:

  - genaut is a new binary that produces families of automata defined
    in the literature (in the same way as we have genltl for LTL
    formulas).

  - autcross is a new binary that compares the output of tools
    transforming automata (in the same way as we have ltlcross for
    LTL translators).

  - genltl learned two generate two new families of formulas:
      --fxg-or=RANGE         F(p0 | XG(p1 | XG(p2 | ... XG(pn))))